css/chat-bundle.css
/* ... */
.admit-content .peers-waiting-card .peer-controls {
  display: flex;
  margin-inline-start: auto;
}
.admit-content .peers-waiting-card .peer-controls i {
  display: inline-block;
  margin-inline-start: 8px;
  --icon-size: 28px;
  --mask-color: var(--icon-rest);
  cursor: pointer;
}
.admit-content .peers-waiting-card .peer-controls i:hover {
  --mask-color: var(--icon-active);
}
.admit-content .peers-waiting-card .peer-controls i:active {
  --mask-color: var(--icon-rest);
}
.admit-controls {
  display: flex;
  justify-content: flex-end;
  width: 100%;
}
.admit-controls button {
  margin-inline-start: 8px;
}
.admit-user-limit-banner {
  background: var(--banner-background-warning);
  border: 1px solid var(--banner-border-warning);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--banner-text-warning);
  padding: 2px 16px;
  text-align: center;
  width: 100%;
  margin-bottom: 16px;
}
.admit-user-limit-banner a {
  color: var(--banner-text-warning);
  text-decoration: underline;
}

.waiting-room {
  display: flex;
  align-items: center;
  flex-direction: column;
  position: fixed;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--surface-grey-1);
  z-index: 141;
  /* --- */
  /* TODO: unify w/ `Join` */
  /* --- */
}
.waiting-room--await, .waiting-room--redirect {
  justify-content: center;
  top: 0;
}
.waiting-room--chatlink-landing {
  justify-content: normal;
}
.waiting-room--chatlink-landing .waiting-room-head {
  margin: 80px 0 0;
}
.waiting-room-head {
  /* [...] */
}
.waiting-room-head .waiting-room-logo {
  /* [...] */
}
.waiting-room-head .waiting-room-logo i {
  display: block;
  margin: 40px auto 0;
  width: 195px;
  height: 65px;
  --width: 195px;
}
.waiting-room-head h1 {
  margin: 24px 0 0 0;
}
@media only screen and (max-height: 600px) {
  .waiting-room-head h1 {
    font: var(--text-h2);
    margin-top: 14px;
    margin-bottom: 18px;
  }
}
.waiting-room .card {
  /* [...] */
}
.waiting-room .card.fit-spacing {
  margin: 0;
}
.waiting-room .card-body {
  /* [...] */
}
@media only screen and (max-height: 600px) {
  .waiting-room .card-body {
    position: relative;
    top: auto;
    margin: 12px 0 0 0;
    transform: none;
  }
}
.waiting-room .card-body h2 {
  margin: 0;
}
.waiting-room .card-body button.waiting-room-leave {
  display: block;
  margin: 20px auto 0;
  border: 0 none;
  font: var(--text-body1);
  color: var(--secondary-red);
  background: transparent;
  cursor: pointer;
}
.waiting-room .card-body button.waiting-room-leave i {
  margin: 0 4px;
  --icon-size: 21px;
}
.waiting-room .card-body .card-fields {
  margin: 30px 0 34px 0;
}
@media only screen and (max-height: 600px) {
  .waiting-room .card-body .card-fields {
    margin: 0 0 14px 0;
  }
}
.waiting-room-schedule {
  display: flex;
  justify-content: center;
  margin: 8px 0 14px;
}
.waiting-room-schedule span {
  display: block;
  float: left;
  margin: 0 2px 0;
  color: var(--text-color-medium);
}
.waiting-room-message {
  width: 80%;
  margin: 14px auto;
  padding: 2px 0;
  border-radius: 3px;
  background: var(--banner-background-info);
  box-shadow: 0 0 0 1px var(--banner-border-info);
  color: var(--banner-text-info);
}

.meetings-alert {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  top: 57px;
  left: 8px;
  width: calc(100% - 282px);
  border-radius: 12px;
  background: var(--secondary-orange);
  z-index: 120;
}
.meetings-alert-light {
  background: var(--secondary-blue);
}
.meetings-alert-neutral {
  background: var(--secondary-grey);
}
.meetings-alert-medium {
  background: var(--secondary-orange);
}
.meetings-alert-high {
  background: var(--secondary-red);
}
.meetings-alert.empty-state {
  top: 5px;
  width: calc(100% - 18px);
}
.meetings-alert.full-span {
  width: calc(100% - 18px);
}
.meetings-alert-content {
  padding: 12px 40px 12px 12px;
  color: var(--secondary-white);
}
.meetings-alert-content a {
  color: var(--secondary-white);
  text-decoration: underline;
}
.meetings-alert-control {
  display: inline-block;
  padding-inline-start: 8px;
}
.meetings-alert-control a {
  color: var(--secondary-white);
  font-family: var(--text-font-family-semibold);
  text-decoration: underline;
}
.meetings-alert-close {
  position: absolute;
  top: 50%;
  right: 14px;
  transform: translateY(-50%);
  cursor: pointer;
}
.meetings-alert-close i {
  display: block;
  --icon-size: 24px;
  --mask-color: var(--secondary-white);
}

#schedule-dialog {
  width: 500px;
  height: 745px;
}
#schedule-dialog.fluid {
  height: auto;
  min-height: 606px;
}
#schedule-dialog.fluid .fm-dialog-body {
  min-height: 436px;
}
#schedule-dialog.with-confirmation-dialog {
  filter: blur(0.25em);
}
#schedule-dialog header {
  padding: 30px 24px 24px;
  border-bottom: 1px solid var(--stroke-grey-2);
  background: var(--surface-grey-1);
}
#schedule-dialog button.close {
  padding-top: 18px;
  padding-inline: 10px;
}
#schedule-dialog .schedule-dialog-row {
  position: relative;
  display: flex;
  align-items: center;
  margin: 0 0 20px 0;
}
#schedule-dialog .schedule-dialog-row.start-aligned {
  align-items: start;
}
#schedule-dialog .schedule-dialog-row.start-aligned .schedule-dialog-column {
  margin-top: 8px;
}
#schedule-dialog .schedule-dialog-row.invalid-aligned {
  margin-bottom: 30px;
}
#schedule-dialog .schedule-dialog-row textarea {
  white-space: pre-wrap;
}
#schedule-dialog .recurring-edit-banner {
  width: 100%;
  margin: 0 0 20px;
  padding: 4px 0;
  text-align: center;
}
#schedule-dialog .recurring-edit-banner a {
  margin: 0 0 0 4px;
  text-decoration: underline;
}
body.theme-dark #schedule-dialog .recurring-edit-banner a {
  color: var(--secondary-white);
}
#schedule-dialog .schedule-dialog-column {
  display: flex;
  justify-content: space-between;
  position: relative;
  width: 100%;
}
#schedule-dialog .schedule-dialog-column:first-child {
  display: block;
  width: 20px;
  height: 20px;
  margin-top: -2px;
  margin-inline: 0 16px;
}
/* ... */

